--- a/client/my-sites/post-share/style.scss
+++ b/client/my-sites/post-share/style.scss
@@ -151,11 +151,25 @@ $section-border: solid 1px transparentize( lighten( $gray, 20% ), .5 );
 		margin: 0;
 	}
 
-	.post-share__button{
-		width: 100%;
+	.post-share__share-combo {
+		display: flex;
+    	margin: 0 4px;
 
-		@include breakpoint( ">480px" ) {
-			width: auto;
+		.post-share__button {
+			border-radius: 4px 0 0 4px;
+			flex-grow: 1;
+			padding: 5px 14px 7px;
+
+			@include breakpoint( ">480px" ) {
+				width: auto;
+			}
+		}
+
+		.post-share__schedule-button {
+			border-radius: 0 4px 4px 0;
+			padding-left: 8px;
+			padding-right: 8px;
+			margin-left: -1px;
 		}
 	}
 }
